Add elements to structure HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Etch-a-Sketch</h1>
+    <h2>Jaime Luong, 2022</h2>
+
+    <div class="container"> <!-- This will contain all the square divs -->
+
+    </div>
 </body>
 </html>
