Add basic sketch functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <h2>Jaime Luong, 2022</h2>
+    <h2>Made by Jaime Luong</h2>
 
     <div class="container"> <!-- This will contain all the square divs -->
 
