Add clear board functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <h1>Etch-a-Sketch</h1>
     <h2>Made by Jaime Luong</h2>
 
+    <div class="buttons">
+        <button id="edit">Edit grid size</button>
+        <button id="clear">Clear board</button>
+    </div>
+
     <div class="container"> <!-- This will contain all the square divs -->
 
     </div>
